[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "warp-vps-kit"
version = "0.1.0"
description = "Chinese-first self-hosted VPS recovery and acceleration toolkit using Cloudflare CDN and WARP."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "warp-vps-kit contributors" }]
keywords = ["cloudflare", "warp", "vps", "xray", "vless", "websocket", "clash"]
dependencies = []

[project.scripts]
warp-vps-kit = "warp_vps_kit.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

