[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "warp-vps-kit"
version = "0.1.0"
description = "Chinese-first self-hosted VPS recovery and acceleration toolkit using Cloudflare CDN and WARP."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "warp-vps-kit contributors" }]
keywords = ["cloudflare", "warp", "vps", "xray", "vless", "websocket", "clash"]
dependencies = []
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Internet :: Proxy Servers",
  "Topic :: System :: Networking",
  "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/cheak1988/warp-vps-kit"
Issues = "https://github.com/cheak1988/warp-vps-kit/issues"
Changelog = "https://github.com/cheak1988/warp-vps-kit/blob/main/CHANGELOG.md"

[project.scripts]
warp-vps-kit = "warp_vps_kit.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
